# omikujizo

./: README.md
app/: Dockerfile  pyproject.toml
app/src/: main.py
app/src/component/display/: lcd_driver.py
app/src/component/display/type/: lcd_driver_interface.py
app/src/component/light/: light_driver.py  light_driver_interface.py
app/src/component/motor/: rpm.py  servo_motor_degree.py  servo_motor_driver.py  servo_motor_driver_interface.py  stepper_motor_degree.py  stepper_motor_driver.py  stepper_motor_driver_interface.py  stepper_motor_revolution.py
app/src/component/motor/servo/: servo_motor_driver.py
app/src/component/motor/stepper/: stepper_motor_driver.py
app/src/component/motor/test/: test_rpm.py
app/src/config/: bow_detector_config.py  config.py  door_config.py  halo_config.py  jewel_config.py  omikuji_config.py
app/src/feature/bow_detector/component/: bow_detector.py
app/src/feature/bow_detector/config/: bow_detector_config.py
app/src/feature/door/component/: door.py
app/src/lib/gpio/: gpio_number.py
app/src/lib/pi_camera/: pi_camera.py  pi_camera_interface.py
app/src/lib/time/: sleep.py  sleep_interface.py
app/src/module/door/: door.py
app/src/module/halo/: halo.py  halo_interface.py
app/src/module/human_detector/: human_detector_interface.py
app/src/module/jewel/: jewel.py
app/src/module/omikuji/: luck.py  omikuji.py  omikuji_interface.py
app/test/component/motor/: test_rpm.py  test_servo_motor_degree.py  test_stepper_motor_degree.py  test_stepper_motor_revolution.py
app/test/lib/gpio/: test_gpio_number.py
(+63 files in other folders)
