[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.10.0.84"
pigpio = "^1.78"
pydantic-settings = "^2.7.0"
annotated-types = "^0.7.0"
pydantic = "^2.10.4"
transitions = "^0.9.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ruff = "^0.8.2"
pytest-mock = "^3.14.0"

[tool.poetry.group.build.dependencies]
nuitka = "^2.5.6"

[tool.ruff]
indent-width = 2
